[project]
name = "prd-calculator"
version = "0.1.0"
description = "Package with functions, data models, and a calculator script for working data in the Policy Rules Database (PRD)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
About = "https://www.atlantafed.org/economic-mobility-and-resilience/advancing-careers-for-low-income-families/policy-rules-database"
Repository = "https://github.com/apsocarras/prd-calculator.git"
Fork = "https://github.com/jdebacker/policy-rules-database"
Data Repo = "https://github.com/apsocarras/prd-data.git"